@@ -74,16 +74,6 @@ our @EXPORT_OK;
 my @xservers     = ('XDarwin', 'Xquartz', 'XDarwinQuartz');
 my $the_instance = undef;
 
-my $compile_script = <<EOSCRIPT;
-#!/bin/sh -e
-cat <<EOMSG
-Package %n is an autogenerated virtual package.
-You cannot manipulate this type of package using the usual Fink tools.
-Read the detailed description of this package to learn how to use it.
-EOMSG
-exit 1
-EOSCRIPT
-
 END { }				# module clean-up code here (global destructor)
 
 
@@ -135,7 +125,7 @@ This package represents the kernel (XNU (Darwin) on Mac OS X),
 which is a core part of the operating system.
 END
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 	$self->{$hash->{package}} = $hash;
 	
 =item macosx
@@ -153,7 +143,6 @@ installations (but not pure Darwin systems).
 	$hash->{package} = "macosx";
 	$hash->{description} = "[virtual package representing the system]";
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	if (Fink::Services::get_sw_vers() ne 0) {
 		$hash->{status} = STATUS_PRESENT;
 		$hash->{version} = Fink::Services::get_sw_vers()."-1";
@@ -167,6 +156,7 @@ installations (but not pure Darwin systems).
 This package represents the Mac OS X software release.
 It will not show as installed on pure Darwin systems.
 END
+	$hash->{compilescript} = gen_compile_script($hash->{descdetail});
 	$self->{$hash->{package}} = $hash;
 
 =item system-perl
@@ -185,11 +175,11 @@ version.
 	$hash->{package} = "system-perl";
 	$hash->{description} = "[virtual package representing perl]";
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	$hash->{descdetail} = <<END;
 This package represents the version of perl installed on the
 system in /usr/bin/perl.
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	if (defined Fink::Services::get_system_perl_version()) {
 		$hash->{version} = Fink::Services::get_system_perl_version()."-1";
@@ -238,7 +228,6 @@ directory exists.
 			$hash->{version}     = $dir . "-1";
 			$hash->{description} = "[virtual package representing Java $dir]";
 			$hash->{homepage}    = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-			$hash->{compilescript} = $compile_script;
 			$hash->{provides}    = 'system-java';
 			if ($ver >= 14) {
 				$hash->{provides} .= ', jdbc, jdbc2, jdbc3, jdbc-optional';
@@ -247,6 +236,7 @@ directory exists.
 This package represents the currently installed version
 of Java $dir.
 END
+			$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 			if ($dir =~ /^\d[\d\.]*$/ and -d $javadir . '/' . $dir . '/Commands') {
 				print STDERR "$dir/Commands " if ($options{debug});
@@ -269,7 +259,6 @@ directory exists.
 				$hash->{version}     = $dir . "-1";
 				$hash->{description} = "[virtual package representing Java $dir development headers]";
 				$hash->{homepage}    = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-				$hash->{compilescript} = $compile_script;
 				$hash->{descdetail}  = <<END;
 This package represents the development headers for
 Java $dir.  If this package shows as not being installed,
@@ -279,6 +268,7 @@ you must download the Java SDK from Apple at:
 
 (free registration required)
 END
+				$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 				if (-d $javadir . '/' . $dir . '/Headers') {
 					print STDERR "$dir/Headers " if ($options{debug});
@@ -344,7 +334,6 @@ the system Java extensions directory.
 	$hash->{version}     = "0-1";
 	$hash->{description} = "[virtual package representing Java3D]";
 	$hash->{homepage}    = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-$hash->{compilescript} = $compile_script;
 	$hash->{descdetail}  = <<END;
 This package represents the Java3D API.  If it does not show
 as installed, you can download it from Apple at:
@@ -353,6 +342,7 @@ as installed, you can download it from Apple at:
 
 (free registration required)
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	print STDERR "- searching for java3d... " if ($options{debug});
 	if (-f '/System/Library/Java/Extensions/j3dcore.jar') {
@@ -386,7 +376,6 @@ file exists in the system Java extensions directory.
 	$hash->{version}     = "0-1";
 	$hash->{description} = "[virtual package representing Java Advanced Imaging]";
 	$hash->{homepage}    = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	$hash->{descdetail}  = <<END;
 This package represents the Java Advanced Imaging API.  If it
 does not show as installed, you can download it from Apple at:
@@ -395,6 +384,7 @@ does not show as installed, you can download it from Apple at:
 
 (free registration required)
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	print STDERR "- searching for javaai... " if ($options{debug});
 	if (-f '/System/Library/Java/Extensions/jai_core.jar') {
@@ -443,7 +433,6 @@ I</usr/bin/ld -v> contain a valid cctools-I<XXX> string.
 	$hash->{status} = STATUS_PRESENT;
 	$hash->{description} = "[virtual package representing the developer tools]";
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	$hash->{builddependsonly} = "true";
 	$hash->{descdetail} = <<END;
 This package represents the C/C++/ObjC developer tools
@@ -454,6 +443,7 @@ you can download it from Apple at:
 
 (free registration required)
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	if (defined ($cctools_version)) {
 		$hash->{version} = $cctools_version."-1";
@@ -496,7 +486,6 @@ if a dummy file can be linked using the -single_module flag.
 	$hash->{package} = "cctools-single-module";
 	$hash->{description} = "[virtual package, your dev tools support -single_module]";
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	$hash->{builddependsonly} = "true";
 	$hash->{descdetail} = <<END;
 This package represents support for the -single_module
@@ -509,6 +498,7 @@ above) from Apple at:
 
 (free registration required)
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	if ($cctools_single_module) {
 		$hash->{status} = STATUS_PRESENT;
@@ -591,12 +581,18 @@ cc1plus.
 	$hash->{version} = "3.3-1";
 	$hash->{description} = "[virtual package representing a broken gcc compiler]";
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	$hash->{builddependsonly} = "true";
 	$hash->{descdetail} = <<END;
 This package represents broken versions of the GCC compiler
-as shipped by Apple.
+as shipped by Apple.  If this package shows as installed,
+you should see if there is a newer version of the developer
+tools at:
+
+  http://connect.apple.com/
+
+(free registration required)
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 	
 	{
 		my $cc1plus = '/usr/libexec/gcc/darwin/ppc/3.3/cc1plus';
@@ -639,13 +635,13 @@ in /usr/lib.
 	$hash->{version} = "4.2.5-1";
 	$hash->{description} = "[virtual package representing Apple's install of Gimp Print]";
 	$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-	$hash->{compilescript} = $compile_script;
 	$hash->{descdetail} = <<END;
 This package represents the version of Gimp-Print that
 comes with Mac OS X 10.3 and above.  If it shows as not
 installed, you must install the GimpPrintPrinterDrivers
 package that came with your Mac OS X CDs.
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	if ( has_lib('libgimpprint.1.1.0.dylib') ) {
 		print STDERR "- found gimp-print-shlibs 4.2.5-1\n" if ($options{debug});
@@ -689,6 +685,7 @@ installation at:
   http://fink.sourceforge.net/faq/usage-packages.php#apple-x11-wants-xfree86
 
 END
+			my $compile_script = &gen_compile_script($descdetail);
 
 			$hash = {};
 			$hash->{package} = "system-xfree86-shlibs";
@@ -729,7 +726,6 @@ END
 			$hash->{status} = STATUS_ABSENT;
 			$hash->{description} = "Manually installed X11 components";
 			$hash->{homepage} = "http://fink.sourceforge.net/faq/usage-general.php#virtpackage";
-			$hash->{compilescript} = $compile_script;
 			$hash->{descdetail} = <<END;
 This package represents the various components of an
 X11 on your system that is not installed through Fink.
@@ -748,6 +744,7 @@ installation at:
   http://fink.sourceforge.net/faq/usage-packages.php#apple-x11-wants-xfree86
 
 END
+			$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 			$hash->{provides} = join ',', map $self->{$_}->{provides}, qw/ system-xfree86 system-xfree86-shlibs system-xfree86-dev /;
 			$self->{$hash->{package}} = $hash;
@@ -967,9 +964,9 @@ in the library.
 							'description' => "[placeholder for user installed x11]",
 							'descdetail'  => $descdetail,
 							'homepage'    => "http://fink.sourceforge.net/faq/usage-general.php#virtpackage",
-							'compilescript' => $compile_script,
 							'provides'    => join(', ', @{$provides->{$pkg}}),
 						};
+						$self->{$pkg}->{compilescript} = &gen_compile_script($self->{$pkg}->{descdetail});
 						if ($pkg eq "system-xfree86-shlibs") {
 							$self->{$pkg}->{'description'} = "[placeholder for user installed x11 shared libraries]";
 						} elsif ($pkg eq "system-xfree86-dev") {
@@ -1016,7 +1013,6 @@ For more info on this package see http://growl.info/.
 	$hash->{status} = STATUS_PRESENT;
 	$hash->{description} = "[virtual package representing Growl]";
 	$hash->{homepage} = "http://growl.info/";
-	$hash->{compilescript} = $compile_script;
 	$hash->{descdetail} = <<END;
 Growl is a global notification system for Mac OS X. Any
 application can send a notification to Growl, which will
@@ -1025,6 +1021,7 @@ currently works with a growing number of applications.
 
   http://growl.info/
 END
+	$hash->{compilescript} = &gen_compile_script($hash->{descdetail});
 
 	if (defined ($growl_version)) {
 		$hash->{version} = $growl_version."-1";
@@ -1254,7 +1251,7 @@ sub gen_gcc_hash {
 	my $status = shift;
 	$is_64bit = $is_64bit ? ' 64-bit' : '';
 
-	return {
+	my $return = {
 		package          => $package,
 		version          => $version
                             . ($status eq STATUS_PRESENT
@@ -1267,7 +1264,6 @@ sub gen_gcc_hash {
 		                        ? 'comp-general.php#gcc2'
 		                        : 'usage-general.php#virtpackage'
 							  ),
-		compilescript    => $compile_script,
 		builddependsonly => 'true',
 		descdetail       => <<END,
 This package represents the$is_64bit gcc $version compiler,
@@ -1278,10 +1274,60 @@ the Apple developer tools are always available from Apple at:
   http://connect.apple.com/
 
 (free registration required)
+
+Note that some versions of GCC are *not* installed by default
+when installing XCode.  Make sure you customize your install
+and check all GCC versions to ensure proper compatibility
+with Fink.
 END
 		status           => $status
-	}
+	};
+
+	$return->{compilescript} = &gen_compile_script($return->{descdetail});
+	return $return;
 }
+
+
+=item &gen_compile_script(I<$descdetail>)
+
+Return the text to put in compilescript for a package, given the
+descdetail of the package.
+
+=cut
+
+sub gen_compile_script {
+	my $descdetail = shift;
+
+	my $return = <<END;
+#!/bin/sh -e
+cat <<EOMSG
+
++----------
+|
+| Attention!
+| 
+| Package %n is an autogenerated virtual package.
+| 
+| You cannot manipulate this type of package using the usual Fink tools.
+| A detailed description of this package follows:
+| 
+END
+
+	for my $line (split(/\n/, $descdetail)) {
+		$return .= "| " . $line . "\n";
+	}
+
+	$return .= <<END;
+| 
++----------
+
+EOMSG
+exit 1
+END
+
+	return $return;
+}
+
 
 =back
 
