@@ -3,6 +3,11 @@
 	* Engine.pm: Enable BuildConflicts when running "fink install" (not
 	just when running "fink build")
 	
+2005-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* VirtPackage.pm: add DescDetail to the install script failure for
+	virtual packages.
+
 2005-02-24  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* PkgVersion.pm: When a compile fails, point the user at the FAQ
